--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,26 +2,42 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:icon="@drawable/add_post"
+        android:id="@+id/nav_post"
+        android:title="New Post"/>
+
+    <item
+        android:icon="@drawable/profile_icon"
+        android:id="@+id/nav_profile"
+        android:title="Profile"/>
+
+    <item
+        android:icon="@drawable/home"
         android:id="@+id/nav_home"
         android:title="Home"/>
 
     <item
+        android:icon="@drawable/friends"
         android:id="@+id/nav_friends"
         android:title="Fiends"/>
 
     <item
+        android:icon="@drawable/find_people"
         android:id="@+id/nav_find_friens"
         android:title="Find Friends"/>
 
     <item
+        android:icon="@drawable/messages"
         android:id="@+id/nav_messages"
         android:title="Messages"/>
 
     <item
+        android:icon="@drawable/settings"
         android:id="@+id/nav_settings"
         android:title="Settings"/>
 
     <item
+        android:icon="@drawable/logout"
         android:id="@+id/nav_logout"
         android:title="Logout"/>
 
