--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout 
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login"
     tools:context=".LoginActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ImageView
+        android:id="@+id/login_icon"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/logo" />
+
+    <EditText
+        android:inputType="textEmailAddress"
+        android:id="@+id/login_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/login_icon"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/inputs"
+        android:drawableLeft="@drawable/email"
+        android:padding="10dp"
+        android:text="Email" />
+
+    <EditText
+        android:inputType="numberPassword"
+        android:id="@+id/login_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_email"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/inputs"
+        android:drawableLeft="@drawable/password"
+        android:padding="10dp"
+        android:text="Password" />
+
+    <Button
+        android:id="@+id/login_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/login_password"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button"
+        android:padding="22dp"
+        android:text="Login"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textAllCaps="false" />
+
+    <TextView
+        android:id="@+id/need_an_account"
+        android:layout_below="@+id/login_button"
+        android:layout_marginTop="15dp"
+        android:textAlignment="center"
+        android:text="Don't have an account, Create one"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/login_with_another"
+        android:layout_below="@+id/need_an_account"
+        android:textAlignment="center"
+        android:text="or Login with"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        android:textColor="#000"
+        android:padding="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:id="@+id/linear_layout"
+        android:layout_below="@id/login_with_another"
+        android:layout_marginTop="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/facebook_sign"
+            android:layout_marginTop="13dp"
+            android:layout_weight="3"
+            android:layout_width="100dp"
+            android:layout_height="80dp"
+            android:src="@drawable/facebook"/>
+
+        <ImageView
+            android:id="@+id/twitter_sign"
+            android:layout_marginBottom="10dp"
+            android:layout_weight="3"
+            android:layout_width="125dp"
+            android:layout_height="105dp"
+            android:src="@drawable/twitter"/>
+
+        <ImageView
+            android:id="@+id/google_sign"
+            android:layout_marginTop="13dp"
+            android:layout_weight="3"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/google"/>
+
+    </LinearLayout>
+
+
+</RelativeLayout>
