--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/email"
         android:padding="10dp"
-        android:text="Email" />
+        android:hint="Email" />
 
     <EditText
         android:inputType="numberPassword"
@@ -42,7 +42,7 @@
         android:background="@drawable/inputs"
         android:drawableLeft="@drawable/password"
         android:padding="10dp"
-        android:text="Password" />
+        android:hint="Password" />
 
     <Button
         android:id="@+id/login_button"
