--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -7,7 +7,7 @@
 
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
+        android:id="@+id/nav_profile_image"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/profile"
@@ -24,6 +24,6 @@
         android:textSize="20sp"
         android:textStyle="bold"
         android:gravity="center"
-        android:layout_below="@+id/profile_image"/>
+        android:layout_below="@+id/nav_profile_image"/>
 
 </RelativeLayout>
