--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -3,7 +3,7 @@
 
     <item
         android:icon="@drawable/add_post"
-        android:id="@+id/nav_post"
+        android:id="@+id/nav_new_post"
         android:title="New Post"/>
 
     <item
