--- a/app/src/main/res/layout/activity_add_new_post.xml
+++ b/app/src/main/res/layout/activity_add_new_post.xml
@@ -6,11 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".AddNewPost">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="add new post"
-        tools:layout_editor_absoluteX="165dp"
-        tools:layout_editor_absoluteY="186dp" />
+    <include
+        android:id="@+id/update_post_page_toolbar"
+        layout="@layout/app_bar_layout"/>
+
 </RelativeLayout>
