--- a/app/src/main/res/layout/activity_add_new_post.xml
+++ b/app/src/main/res/layout/activity_add_new_post.xml
@@ -4,10 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/login"
     tools:context=".AddNewPost">
 
     <include
         android:id="@+id/update_post_page_toolbar"
         layout="@layout/app_bar_layout"/>
+
+    <ImageButton
+        android:id="@+id/add_new_post_image"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/update_post_page_toolbar"
+        android:layout_marginTop="5dp"
+        android:scaleType="centerCrop"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button"
+        android:src="@drawable/select_image"/>
+
+    <EditText
+        android:id="@+id/add_new_post_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="120dp"
+        android:layout_below="@+id/add_new_post_image"
+        android:hint="What is in your mind"
+        android:textAlignment="textStart"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button"
+        android:layout_marginTop="10dp"/>
+
+    <Button
+        android:id="@+id/add_new_post_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Update Post"
+        android:layout_below="@+id/add_new_post_edit_text"
+        android:layout_marginTop="5dp"
+        android:padding="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/button"/>
 
 </RelativeLayout>
